Prevent auto-zoom when input gets focus on mobile browsers

--- a/embed/reading-list/style.styl
+++ b/embed/reading-list/style.styl
@@ -3,3 +3,8 @@ table
 
     tr 
         cursor pointer
+
+@media screen and (-webkit-min-device-pixel-ratio:0) 
+    #main 
+        select, input 
+            font-size 16px
